    HDFS-9426. Rollingupgrade finalization is not backward compatible
    (Kihwal Lee via vinayakumarb)

    HDFS-9445. Datanode may deadlock while handling a bad volume.
    (Wlater Su via Kihwal)

    HDFS-8767. RawLocalFileSystem.listStatus() returns null for UNIX pipefile.
    (Kanaka Kumar Avvaru via wheat9)

Release 2.7.1 - 2015-07-06

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-9193. Fix incorrect references the usages of the DN in dfshealth.js.
    (Chang Li via wheat9)

    HDFS-8779. WebUI fails to display block IDs that are larger than 2^53 - 1.
    (wheat9)

    HDFS-8081. Split getAdditionalBlock() into two methods. (shv)

    HDFS-7931. DistributedFileSystem should not look for keyProvider in
    cache if Encryption is disabled (asuresh)

    HDFS-8204. Mover/Balancer should not schedule two replicas to the same
    datanode.  (Walter Su via szetszwo)

    HDFS-7770. Need document for storage type label of data node storage
    locations under dfs.data.dir. (Xiaoyu Yao via aajisaka)

    HDFS-8213. DFSClient should use hdfs.client.htrace HTrace configuration
    prefix rather than hadoop.htrace (cmccabe)

    HDFS-8521. Add VisibleForTesting annotation to
    BlockPoolSlice#selectReplicaToDelete. (cmccabe)

    HDFS-8361. Choose SSD over DISK in block placement.  (szetszwo)

    HDFS-7546. Document, and set an accepting default for
    dfs.namenode.kerberos.principal.pattern (Harsh J via aw)

  OPTIMIZATIONS

    HDFS-7164. Feature documentation for HDFS-6581. (Arpit Agarwal)

    HDFS-7986. Allow files / directories to be deleted from the NameNode UI.
    (Ravi Prakash via wheat9)

    HDFS-7995. Implement chmod in the HDFS Web UI.
    (Ravi Prakash and Haohui Mai via wheat9)

    HDFS-7713. Implement mkdirs in the HDFS Web UI. (Ravi Prakash via wheat9)

    HDFS-6407. Add sorting and pagination in the datanode tab of the NN Web UI.
    (wheat9)

    HDFS-8816. Improve visualization for the Datanode tab in the NN UI. (wheat9)
